# cyclic-boosting

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: Create_Task.yml  Update Task_Status_to_In_Progress.yml  Update_Task_Status_to_Done.yml  Update_Task_Status_to_In_Review.yml  python-publish.yml  tests.yaml
cyclic_boosting/: GBSregression.py  __init__.py  base.py  classification.py  common_smoothers.py  cxx_regression.py  estimator.py  features.py  flags.py  generic_loss.py  interaction_selection.py  learning_rate.py  linear.py  link.py  link_predictions.py  location.py  nbinom.py  observers.py  pipelines.py  price.py  quantile_matching.py  regression.py  testing_utils.py  utils.py
cyclic_boosting/binning/: __init__.py  _binary_search.py  _utils.py  bin_number_transformer.py  ecdf_transformer.py
docs/: requirements.txt
examples/: gammaln_test.ipynb
tests/: conftest.py  test_binary_search.py  test_features.py  test_gammaln.py  test_integration.py  test_interaction_selection.py  test_learning_rate.py  test_link.py  test_plots.py  test_quantile_matching.py  test_smoothing_base.py  test_smoothing_multidim.py  test_smoothing_onedim.py  test_smoothing_ortho.py  test_tornado.py  test_tornado_analysis.py  test_tornado_datamodule.py  test_tornado_evaluator.py  test_tornado_logger.py  test_tornado_manager.py  test_tornado_metrics.py  test_tornado_module.py  test_tornado_preprocess.py  test_tornado_trainer.py  test_utils.py  utils.py
(+57 files in other folders)
